# opzioni

./: .clang-format  .gitignore  404.html  LICENSE  Makefile  README.md  conanfile.py  conanfile.txt  conda-gcc.ini  environment.yml  index.html  meson.build  meson_options.txt  shell.nix  sitemap.xml  variant.cpp
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  fedora.Dockerfile
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  build.yml  clang-format.yml  conan.yml  docs.yml  test-conan-package.yml  tests.yml
docs/: mkdocs.yml  requirements.txt
docs/src/: index.md  user-guide.md
docs/src/user-guide/: beyond-basics.md  customization.md  customizing-programs.md  from-scratch.md  running-with-docker.md  the-basics.md
examples/: custom_action.cpp  docker.cpp  docker2.cpp  gather.cpp  git.cpp  hello.cpp  main.cpp  meson.build
include/: actions.hpp  all.hpp  arg.hpp  args.hpp  args_map.hpp  args_view.hpp  cmd.hpp  cmd_info.hpp  command.hpp  concepts.hpp  converters.hpp  exceptions.hpp  exp.hpp  fixed_string.hpp  formatting.hpp  get_type.hpp  memory.hpp  opzioni.hpp  parsing.hpp  program.hpp  string.hpp  string_list.hpp  strings.hpp  type_list.hpp  types.hpp  variant.hpp
include/experimental/: all.hpp  arg.hpp  command.hpp  exp.hpp  fixed_string.hpp  get_type.hpp  parsing.hpp  program.hpp  string_list.hpp  type_list.hpp
include/opzioni/: actions.hpp  all.hpp  arg.hpp  args_map.hpp  cmd.hpp  cmd_fmt.hpp  cmd_info.hpp  concepts.hpp  converters.hpp  exceptions.hpp  extra.hpp  fixed_string.hpp  get_type.hpp  parsing.hpp  parsing_v2.hpp  scanner.hpp  string_list.hpp  strings.hpp  type_list.hpp  value_list.hpp  variant.hpp
search/: search_index.json
src/: actions.cpp  arg.cpp  args.cpp  args_view.cpp  cmd_fmt.cpp  cmd_info.cpp  converters.cpp  converters.test.cpp  error.cpp  formatting.cpp  meson.build  opzioni.cpp  opzioni.program.test.cpp  parsing.cpp  parsing.test.cpp  parsing_v2.cpp  program.cpp  program.test.cpp  scanner.cpp  string.cpp  strings.cpp  types.cpp  types.test.cpp
src/examples/: main.cpp
src/experimental/: arg.cpp  parsing.cpp
subprojects/: fmt.wrap
test_package/: conanfile.py  main.cpp  meson.build
tests/: converters.cpp  meson.build  opzioni.arg.cpp  opzioni.program.cpp  string.cpp
user-guide/: index.html
user-guide/beyond-basics/: index.html
user-guide/customization/: index.html
user-guide/customizing-program/: index.html
user-guide/customizing-programs/: index.html
user-guide/from-scratch/: index.html
user-guide/running-with-docker/: index.html
user-guide/the-basics/: index.html
