hello = executable(
    'hello', 'hello.cpp',
    dependencies: [fmt_dep, opzioni_dep]
)

twice = executable(
    'twice', 'custom_action.cpp',
    dependencies: [fmt_dep, opzioni_dep]
)

docker = executable(
    'docker', 'docker.cpp',
    dependencies: [fmt_dep, opzioni_dep]
)

docker2 = executable(
    'docker2', 'docker2.cpp',
    dependencies: [fmt_dep, opzioni_dep]
)
